fix: change your-active-class style so its more visible

--- a/css/styles.css
+++ b/css/styles.css
@@ -198,10 +198,20 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* ---- Theme State Rules ---- */
 /* Section Active Styles */
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
-section.your-active-class {
+/*section.your-active-class {
     background: rgb(0, 0, 0);
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
-}
+}*/
+
+section.your-active-class {
+    background: rgb(108 30 121 0.5);
+    background: linear-gradient(
+      0deg,
+      rgb(87 6 93 / 69%) 0%,
+      rgb(0 0 0 / 45%) 100%
+    );
+    border-radius: 20px;
+  }
 
 section.your-active-class .landing__container::before {
     opacity: 1;
